Align fix

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -704,7 +704,7 @@
 /* Footer */
 
 	#footer {
-		margin-left: 375px;
+		margin-left: 200px;
 		text-align: center;
 		background-color: #dce3e2;
 		padding: 3em 0 4em 0;
@@ -735,7 +735,7 @@
 /* Main */
 
 	#main {
-		margin-left: 375px;
+		margin-left: 200px;
 
 		> section {
 			margin: 0;
